--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tijar Plastik</title>
+    <meta name="google-site-verification" content="h3qDUUIkvnJsbsrRFyHse3IYX8xrh-K1iyhYO4iA_u0" />
   </head>
   <body>
     <div id="app"></div>
