--- a/index.html
+++ b/index.html
@@ -7,6 +7,27 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Tijar Plastik</title>
   <meta name="google-site-verification" content="h3qDUUIkvnJsbsrRFyHse3IYX8xrh-K1iyhYO4iA_u0" />
+  <!-- Primary Meta Tags -->
+<title>tijar plastik</title>
+<meta name="title" content="tijar plastik" />
+<meta name="description" content="menjual berbagai macam plastik kemasan serta bahan kue dengan harga murah berlokasi di klapanunggal cikahuripan bogor" />
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://metatags.io/" />
+<meta property="og:title" content="tijar plastik" />
+<meta property="og:description" content="menjual berbagai macam plastik kemasan serta bahan kue dengan harga murah berlokasi di klapanunggal cikahuripan bogor" />
+<meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image" />
+<meta property="twitter:url" content="https://metatags.io/" />
+<meta property="twitter:title" content="tijar plastik" />
+<meta property="twitter:description" content="menjual berbagai macam plastik kemasan serta bahan kue dengan harga murah berlokasi di klapanunggal cikahuripan bogor" />
+<meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
+
+<!-- Meta Tags Generated with https://metatags.io -->
+  
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-38ZSFX0F61"></script>
   <script>
