--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
 <meta property="og:url" content="https://metatags.io/" />
 <meta property="og:title" content="tijar plastik" />
 <meta property="og:description" content="menjual berbagai macam plastik kemasan serta bahan kue dengan harga murah berlokasi di klapanunggal cikahuripan bogor" />
-<meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
+<meta property="og:image" content="img/slide-6.jpeg" />
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image" />
 <meta property="twitter:url" content="https://metatags.io/" />
 <meta property="twitter:title" content="tijar plastik" />
 <meta property="twitter:description" content="menjual berbagai macam plastik kemasan serta bahan kue dengan harga murah berlokasi di klapanunggal cikahuripan bogor" />
-<meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
+<meta property="twitter:image" content="img/slide-6.jpeg" />
 
 <!-- Meta Tags Generated with https://metatags.io -->
   
