commit seo lagi

--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://metatags.io/" />
+<meta property="og:url" content="https://tijarplastik.vercel.app" />
 <meta property="og:title" content="tijar plastik" />
 <meta property="og:description" content="menjual berbagai macam plastik kemasan serta bahan kue dengan harga murah berlokasi di klapanunggal cikahuripan bogor" />
 <meta property="og:image" content="https://tijarplastik.vercel.app/img/slide-6.jpeg" />
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image" />
-<meta property="twitter:url" content="https://metatags.io/" />
+<meta property="twitter:url" content="https://tijarplastik.vercel.app" />
 <meta property="twitter:title" content="tijar plastik" />
 <meta property="twitter:description" content="menjual berbagai macam plastik kemasan serta bahan kue dengan harga murah berlokasi di klapanunggal cikahuripan bogor" />
 <meta property="twitter:image" content="https://tijarplastik.vercel.app/img/slide-6.jpeg" />
